edit: changes in report

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -505,7 +505,7 @@
     "\n",
     "In a K-fold CV the training set is split into k sets and model is trained (K-1) of the folds and the resultinng model is validated on remaining data. This is repeated for each of the K sets and the final performance measure is the average of all the values reported.\n",
     "\n",
-    "GridSearchCV is a way of systematically working through multiple combinations of parameter tunes, cross-validating as it goes to determine which tune gives the best performance."
+    "GridSearchCV is a way of systematically working through multiple combinations of parameter tunes, cross-validating as it goes to determine which tune gives the best performance. The advantage of using cross validation is that it allows maximum possible use of data as each of the data subsets serves as both testing and training data equal number of times. Using cross validation and grid search gives us a systematic way of searching through different levels of complexity to find the optimal model, that gives us an accurate estimate of how well it responds to unknown data"
    ]
   },
   {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +553,7 @@
     "    regressor = DecisionTreeRegressor()\n",
     "\n",
     "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {\"max_depth\":range(1, 10)}\n",
+    "    params = {\"max_depth\":range(1, 11)}\n",
     "\n",
     "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -701,17 +701,17 @@
      "output_type": "stream",
      "text": [
       "Trial 1: $391,183.33\n",
-      "Trial 2: $424,935.00\n",
+      "Trial 2: $419,700.00\n",
       "Trial 3: $415,800.00\n",
       "Trial 4: $420,622.22\n",
-      "Trial 5: $418,377.27\n",
+      "Trial 5: $413,334.78\n",
       "Trial 6: $411,931.58\n",
       "Trial 7: $399,663.16\n",
       "Trial 8: $407,232.00\n",
       "Trial 9: $351,577.61\n",
       "Trial 10: $413,700.00\n",
       "\n",
-      "Range in prices: $73,357.39\n"
+      "Range in prices: $69,044.61\n"
      ]
     }
    ],
